<resources>
    <string name="app_name">PChart</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Reset Password?</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="welcome_text">Hello there, welcome back</string>
    <string name="sing_in_to_continue">Sing In to continue</string>
    <string name="resent_verification">Resent Verification</string>
    <string name="am_glad_you_are_joining_us">Am glad you are joining us!</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_account_sign_in">Have Account? Sign in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="email_forgot_password">Enter your email address</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="details_resend_verification">Enter Details You Used To Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="no_spaces">Spaces Are Not Allowed</string>
    <string name="dbnode_users">users</string>
    <string name="user_profile">User profile</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="primary_contact_phone">Primary contact phone</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>


    <!-- Firebase Database Fields -->
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>
    <string name="field_chatroom_id">chatroom_id</string>
    <string name="field_chatroom_messages">chatroom_messages</string>
    <string name="field_message">message</string>
    <string name="field_timestamp">timestamp</string>
    <string name="dialog_change_photo">Change profile photo</string>
    <string name="choose_photo_from_memory">Choose photo from memory</string>
    <string name="take_a_photo">Take a Photo</string>
</resources>