<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_profile"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/textHeader"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="" />

                <RelativeLayout
                    android:id="@+id/relLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/profile_image"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:background="@null"
                        android:hint="@string/first_and_last_name"
                        android:textColor="#000" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/relLayout2">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_contact_phone_24" />

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:background="@null"
                        android:hint="Primary contact phone #"
                        android:inputType="phone"
                        android:textColor="#000" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/relLayout3">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_contact_mail_24" />

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:background="@null"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textColor="#000" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/relLayout4">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:background="@null"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:textColor="#000" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relLayout5"
                    android:layout_marginTop="35dp"
                    android:background="#000"
                    android:text="@string/save"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_save"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Change Password"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />

</RelativeLayout>